# Blog_Application

./: pyproject.toml
blog_appp/: celerybeat-schedule.bak  db.sqlite3  dump.rdb  manage.py  requirement.txt
blog_appp/blog_appp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
blog_appp/blogs/: admin.py  forms.py  models.py  task.py  urls.py  views.py
blog_appp/blogs/migrations/: 0001_initial.py  0002_alter_blogdata_date.py  0003_alter_authors_name_alter_blogdata_title.py  0004_blogdata_image.py  0005_blogpost_category_tag_delete_blogdata_and_more.py  0006_rename_name_authors_aname_rename_name_category_cname_and_more.py  0007_blogpost_publish_date.py  0008_remove_blogpost_publish_date.py  0009_blogpost_notified.py
blog_appp/template/: all.html  base.html  blogs.html  home.html  login.html  register.html  show.html  test.html  unauthorized.html
