[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Creating Blog Application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
django-stubs = "^4.2.3"
mypy = "^1.5.0"
isort = "^5.12.0"
black = "^23.7.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
